fixed overlay issue with banner by z-index

--- a/assets/css/custom-materialize.css
+++ b/assets/css/custom-materialize.css
@@ -317,7 +317,7 @@ body {
 }
 
 .sidenav {
-  z-index: 1200;
+  z-index: 1300;
 }
 
 .waves-effect {
